src/test/deca/syntax/invalid/17_equal_if.deca
// Description:
//    
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    if (a!9){
        
    }

}